# mpv-handler

./: Cargo.toml  LICENSE  README.md  README_EN.md
.github/workflows/: build_and_release.yaml  testing.yaml
cfg_tool/: Cargo.toml
cfg_tool/src/: main.rs
config/: Cargo.toml
config/src/: main.rs
handler-config/: Cargo.toml
handler-config/src/: main.rs
scripts/: README.md  README_EN.md  config.toml.template  reg.bat  注册表.bat
src/: config.rs  error.rs  main.rs  network.rs
