[package]
name = "mpv-handler"
version = "0.1.0"
edition = "2021"
authors = ["kosette"]
description = "play videos from website using mpv"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = {version = "1.0",features = ["derive"]}
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
debug = false
strip = true
